Closed Bug 1289931 Opened 9 years ago Closed 9 years ago

Clearkey should fire InvalidAccessError instead of AbortError on invalid initData

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file)

This EME WPT of Google's fails: https://w3c-test.org/encrypted-media/Google/encrypted-media-generate-request-disallowed-input.html It fails because our ClearKey has different behaviour to Chrome's. When our ClearKey's generateRequest() is passed invalid initData, our ClearKey rejects with AbortError, but the test assumes InvalidAccessError.
Comment on attachment 8775354 [details] Bug 1289931 - Fire InvalidAccessError instead of AbortError when ClearKey's generateRequest is passed invalid initData. https://reviewboard.mozilla.org/r/67522/#review64672
Attachment #8775354 - Flags: review?(gsquelart) → review+
Pushed by cpearce@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7f6d8a4e0ee6 Fire InvalidAccessError instead of AbortError when ClearKey's generateRequest is passed invalid initData. r=gerald
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: