Bug 1289931 - Fire InvalidAccessError instead of AbortError when ClearKey's generateRequest is passed invalid initData. r=gerald

Google's Web Platform EME test expects this, and it makes sense.

MozReview-Commit-ID: CCuEHYintob